# lm-predict-thinking-fcee

./: .resource_finder_complete  create_sample.py  download_papers.py  download_papers_retry.py  literature_review.md  planning.md  pyproject.toml  resources.md
.gemini/: settings.json  settings.json.orig
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
papers/: README.md
results/: experiment_results.json
src/: experiment.py
